<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/hello1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/randomNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp" />

        <ProgressBar
            android:id="@+id/randomLoadingProgressBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="6dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/randomRefreshBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/randomClearMemoryCacheBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_memory_cache" />

        <Button
            android:id="@+id/randomClearMemoryAndDiskCacheBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_memory_and_disk_cache" />

        <TextView
            android:id="@+id/randomSourceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/unknown"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>
